[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1"

tungstenite = "0.26.2"
common ={ path = "../common" }

tiff = "0.9.1"
usls = { git = "https://github.com/jamjamjon/usls.git", branch = "main" }
image = { version = "0.25.6", default-features = false }
